<package>
  <name>irk_gazebo_plugins</name>
  <version>0.1.0</version>
  <description>irk_gazebo_plugins</description>
  <maintainer email="jbo@jhu.edu">Jonathan Bohren</maintainer>

  <license>BSD</license>

  <url type="website">http://gitlab.jhu.lcsr.edu</url>

  <author>Ish Sanchez</author>

  <buildtool_depend>catkin</buildtool_depend>


  <build_depend>roscpp</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_depend>hardware_interface</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>gazebo_ros</run_depend>

  <export>
    <gazebo_ros_control plugin="${prefix}/mtm_gazebo_ros_control_plugin.xml"/>
  </export>
</package>

